Fix alignment of timeline inputs grid text boxes by setting a taller min-height and tighter line-height on labels

--- a/css/styles.css
+++ b/css/styles.css
@@ -1313,7 +1313,8 @@ p {
     align-items: flex-end;
     justify-content: center;
     text-align: center;
-    min-height: 38px;
+    min-height: 48px;
+    line-height: 1.3;
     margin-bottom: 0;
     width: 100%;
 }
